#######################################################################################################################
# Copyright [2023] Renesas Electronics Corporation and/or its licensors. All Rights Reserved.
#
# The contents of this file (the "contents") are proprietary and confidential to Renesas Electronics Corporation
# and/or its licensors ("Renesas") and subject to statutory and contractual protections.
#
# Unless otherwise expressly agreed in writing between Renesas and you: 1) you may not use, copy, modify, distribute,
# display, or perform the contents; 2) you may not use any name or mark of Renesas for advertising or publicity
# purposes or in connection with your use of the contents; 3) RENESAS MAKES NO WARRANTY OR REPRESENTATIONS ABOUT THE
# SUITABILITY OF THE CONTENTS FOR ANY PURPOSE; THE CONTENTS ARE PROVIDED "AS IS" WITHOUT ANY EXPRESS OR IMPLIED
# WARRANTY, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND
# NON-INFRINGEMENT; AND 4) RENESAS SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, SPECIAL, OR CONSEQUENTIAL DAMAGES,
# INCLUDING DAMAGES RESULTING FROM LOSS OF USE, DATA, OR PROJECTS, WHETHER IN AN ACTION OF CONTRACT OR TORT, ARISING
# OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THE CONTENTS. Third-party contents included in this file may
# be subject to different terms.
#######################################################################################################################

message(STATUS "OS")

#----------------------------------------------------------------------------------------------------------------------
# R-Car xOS SoC/Board selection
#----------------------------------------------------------------------------------------------------------------------

if(NOT RCAR_SOC) # This guard allows to set RCAR_SOC externally, e.g. via CMake Commandline during configuration
    set(RCAR_SOC
        V3H1 # Allowed values are at the moment V3H1, V3M2. Availability depends on the package you have.
    )
endif()

# Alternative: Selection via your board:
# if(NOT RCAR_BOARD) # This guard allows to set RCAR_BOARD externally, e.g. via CMake Commandline during configuration
#     set(RCAR_BOARD
#         v3hsk # eagle, v3msk, condor, v3hsk. Availability depends on the package you have.
#     )
# endif()

#----------------------------------------------------------------------------------------------------------------------
# Each SoC Definition
#----------------------------------------------------------------------------------------------------------------------
if(RCAR_SOC STREQUAL "v3u")
    add_definitions(-DOSAL_SOC_V3U)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v3h1")
    add_definitions(-DOSAL_SOC_V3H1)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v3m2")
    add_definitions(-DOSAL_SOC_V3M2)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v3h2")
    add_definitions(-DOSAL_SOC_V3H2)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v4h")
    add_definitions(-DOSAL_SOC_V4H)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v4h2")
    add_definitions(-DOSAL_SOC_V4H2)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif((RCAR_SOC STREQUAL "s4") OR (RCAR_SOC STREQUAL "s4n"))
    add_definitions(-DOSAL_SOC_S4)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
elseif(RCAR_SOC STREQUAL "v4m")
    add_definitions(-DOSAL_SOC_V4M)
    add_definitions(-DSUPPORT_32BIT_BUS)
    add_definitions(-DSUPPORT_64BIT_BUS)
endif()

if(RCAR_XIL STREQUAL hil)
    if(RCAR_TARGET_OS STREQUAL "linux")
        add_definitions(-DTEST_LINUX)
        add_definitions(-DSUPPORT_NEW_AXI_BUS_NAME_RULE)
        if(RCAR_SOC STREQUAL "v3u")
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v3h1")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v3h2")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
        elseif(RCAR_SOC STREQUAL "v3m2")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
        elseif(RCAR_SOC STREQUAL "v4h")
            add_definitions(-DUNSUPPORT_GFX)
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
            add_definitions(-DUNSUPPORT_VIDEO_INPUT)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
            add_definitions(-DUNSUPPORT_VDSP)
        elseif(RCAR_SOC STREQUAL "v4h2")
            add_definitions(-DUNSUPPORT_GFX)
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
            add_definitions(-DUNSUPPORT_VIDEO_INPUT)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
            add_definitions(-DUNSUPPORT_VDSP)
        elseif((RCAR_SOC STREQUAL "s4") OR (RCAR_SOC STREQUAL "s4n"))
        elseif(RCAR_SOC STREQUAL "v4m")
            add_definitions(-DUNSUPPORT_GFX)
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
            add_definitions(-DUNSUPPORT_VIDEO_INPUT)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
            add_definitions(-DUNSUPPORT_VDSP)
            add_definitions(-DUNSUPPORT_FCPC)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSC)
            add_definitions(-DUNSUPPORT_QOS)
            add_definitions(-DUNSUPPORT_RCARBUSMONI)
        endif()
    elseif(RCAR_TARGET_OS STREQUAL "qnx")
        set(test_arg "--gtest_filter=-OsalApiStateTest*")
        add_definitions(-DTEST_QNX)
        add_definitions(-DTEST_AFFINITY)
        add_definitions(-DSUPPORT_NEW_AXI_BUS_NAME_RULE)
        add_definitions(-DSUPPORT_STATIC_ENV)
        if(RCAR_SOC STREQUAL "v3u")
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v3h1")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v3h2")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v3m2")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_SYSTEM_RAM_TEST)
        elseif(RCAR_SOC STREQUAL "v4h")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
        elseif(RCAR_SOC STREQUAL "v4h2")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
        elseif((RCAR_SOC STREQUAL "s4") OR (RCAR_SOC STREQUAL "s4n"))
        elseif(RCAR_SOC STREQUAL "v4m")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_FCPR)
            add_definitions(-DUNSUPPORT_FCPC)
            add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSC)
            add_definitions(-DUNSUPPORT_QOS)
            add_definitions(-DUNSUPPORT_RCARBUSMONI)
        endif()
    elseif(RCAR_TARGET_OS STREQUAL "emcos")
        add_definitions(-DTEST_EMCOS)
        add_definitions(-DSUPPORT_STATIC_ENV)
        if(RCAR_SOC STREQUAL "v4h")
            add_definitions(-DUNSUPPORT_FBC_DEVICE)
            add_definitions(-DUNSUPPORT_IPMMU)
            add_definitions(-DUNSUPPORT_FCPR)
        endif()
    endif()
elseif(RCAR_XIL STREQUAL sil)
    if(RCAR_TARGET_OS STREQUAL "windows")
        add_definitions(-DTEST_WINDOWS)
    endif()
    add_definitions(-DTEST_SIL)
    add_definitions(-DSUPPORT_NEW_AXI_BUS_NAME_RULE)
    if(RCAR_SOC STREQUAL "v3u")
        add_definitions(-DUNSUPPORT_IMP_CHILD_DEVICE)
        add_definitions(-DUNSUPPORT_IMP_CHILD_DEVICE_DMAC)
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_VCP4)
        add_definitions(-DUNSUPPORT_FCPC)
        add_definitions(-DUNSUPPORT_VSPX)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
    elseif(RCAR_SOC STREQUAL "v3h1")
        add_definitions(-DUNSUPPORT_VIP)
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_ISP)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
    elseif(RCAR_SOC STREQUAL "v3h2")
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
    elseif(RCAR_SOC STREQUAL "v3m2")
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_ISP)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
    elseif(RCAR_SOC STREQUAL "v4h")
        add_definitions(-DUNSUPPORT_GFX)
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_VCP4)
        add_definitions(-DUNSUPPORT_FCPC)
        add_definitions(-DUNSUPPORT_VSPX)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
        add_definitions(-DUNSUPPORT_CAIPLITE)
        add_definitions(-DUNSUPPORT_WCRC_CAIPLITE)
        add_definitions(-DUNSUPPORT_CAIPLITE_LITE)
        add_definitions(-DUNSUPPORT_VIDEO_INPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSI_ENCODER)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DISPLAY)
        add_definitions(-DUNSUPPORT_RTDMAC_CONTROL)
        add_definitions(-DUNSUPPORT_WWDT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSC)
        add_definitions(-DUNSUPPORT_RTDMAC_DESCRIPTOR)
        add_definitions(-DUNSUPPORT_PAP)
        add_definitions(-DUNSUPPORT_ICUMX_CMD)
        add_definitions(-DUNSUPPORT_VDSP)
        add_definitions(-DUNSUPPORT_VIP)
    elseif(RCAR_SOC STREQUAL "v4h2")
        add_definitions(-DUNSUPPORT_VIP_WRAPPER)
        add_definitions(-DUNSUPPORT_GFX)
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_VCP4)
        add_definitions(-DUNSUPPORT_FCPC)
        add_definitions(-DUNSUPPORT_VSPX)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
        add_definitions(-DUNSUPPORT_CAIPLITE)
        add_definitions(-DUNSUPPORT_WCRC_CAIPLITE)
        add_definitions(-DUNSUPPORT_CAIPLITE_LITE)
        add_definitions(-DUNSUPPORT_VIDEO_INPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSI_ENCODER)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DISPLAY)
        add_definitions(-DUNSUPPORT_RTDMAC_CONTROL)
        add_definitions(-DUNSUPPORT_WWDT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSC)
        add_definitions(-DUNSUPPORT_RTDMAC_DESCRIPTOR)
        add_definitions(-DUNSUPPORT_PAP)
        add_definitions(-DUNSUPPORT_ICUMX_CMD)
        add_definitions(-DUNSUPPORT_VDSP)
        add_definitions(-DUNSUPPORT_VIP)
    elseif(RCAR_SOC STREQUAL "v4m")
        add_definitions(-DUNSUPPORT_VIP_WRAPPER)
        add_definitions(-DUNSUPPORT_GFX)
        add_definitions(-DUNSUPPORT_ICCOM)
        add_definitions(-DUNSUPPORT_IVCP1E)
        add_definitions(-DUNSUPPORT_VCP4)
        add_definitions(-DUNSUPPORT_FCPC)
        add_definitions(-DUNSUPPORT_VSPX)
        add_definitions(-DUNSUPPORT_FBC_DEVICE)
        add_definitions(-DUNSUPPORT_FBA)
        add_definitions(-DUNSUPPORT_RFSO)
        add_definitions(-DUNSUPPORT_IPMMU)
        add_definitions(-DUNSUPPORT_FCPR)
        add_definitions(-DUNSUPPORT_CAIPLITE)
        add_definitions(-DUNSUPPORT_WCRC_CAIPLITE)
        add_definitions(-DUNSUPPORT_CAIPLITE_LITE)
        add_definitions(-DUNSUPPORT_VIDEO_INPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_VSPD)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_CSI2)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSI_ENCODER)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DISPLAY)
        add_definitions(-DUNSUPPORT_RTDMAC_CONTROL)
        add_definitions(-DUNSUPPORT_WWDT)
        add_definitions(-DUNSUPPORT_VIDEO_OUTPUT_DSC)
        add_definitions(-DUNSUPPORT_RTDMAC_DESCRIPTOR)
        add_definitions(-DUNSUPPORT_PAP)
        add_definitions(-DUNSUPPORT_ICUMX_CMD)
        add_definitions(-DUNSUPPORT_VDSP)
        add_definitions(-DUNSUPPORT_VIP)
        add_definitions(-DUNSUPPORT_FCPVX)
        add_definitions(-DUNSUPPORT_GICD)
        add_definitions(-DUNSUPPORT_QOS)
        add_definitions(-DUNSUPPORT_RCARBUSMONI)
    endif()
endif()

add_subdirectory(1-1)
add_subdirectory(1-2)
add_subdirectory(1-3)
add_subdirectory(1-4)
add_subdirectory(1-5)
add_subdirectory(1-6)
add_subdirectory(1-7)
add_subdirectory(1-8)
add_subdirectory(1-9)
add_subdirectory(2-1)
add_subdirectory(2-2)
add_subdirectory(2-3)
add_subdirectory(2-4)
add_subdirectory(2-5)
add_subdirectory(2-6)
add_subdirectory(2-7)
add_subdirectory(2-8)
add_subdirectory(2-9)
add_subdirectory(3-1)
add_subdirectory(3-2)
add_subdirectory(3-3)
add_subdirectory(3-4)
add_subdirectory(3-5)
add_subdirectory(3-6)
add_subdirectory(3-7)
add_subdirectory(3-8)
add_subdirectory(3-9)

